--- a/package.json
+++ b/package.json
@@ -2,14 +2,16 @@
   "name": "telegram-bot",
   "version": "1.0.0",
   "description": "",
-  "main": "dist/index.js",
+  "main": "index.ts",
   "scripts": {
+    "start": "ts-node src/index.ts",
     "build": "tsc"
   },
   "dependencies": {
     "axios": "^1.7.7",
     "dotenv": "^16.4.5",
-    "grammy": "^1.32.0"
+    "grammy": "^1.32.0",
+    "ts-node": "^10.9.2"
   },
   "devDependencies": {
     "typescript": "^5.5.3"
