--- a/package.json
+++ b/package.json
@@ -1,20 +1,26 @@
 {
-  "name": "telegram-bot",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.ts",
-  "scripts": {
-    "start": "ts-node src/index.ts",
-    "build": "tsc"
-  },
-  "dependencies": {
-    "axios": "^1.7.7",
-    "dotenv": "^16.4.5",
-    "grammy": "^1.32.0",
-    "ts-node": "^10.9.2"
-  },
-  "devDependencies": {
-    "typescript": "^5.5.3"
-  },
-  "private": true
+   "name": "telegram-bot",
+   "version": "1.0.0",
+   "description": "",
+   "main": "index.ts",
+   "scripts": {
+      "start": "ts-node src/index.ts",
+      "build": "tsc",
+      "typeorm": "typeorm-ts-node-commonjs"
+   },
+   "dependencies": {
+      "axios": "^1.7.7",
+      "dotenv": "^16.4.5",
+      "grammy": "^1.32.0",
+      "pg": "^8.4.0",
+      "reflect-metadata": "^0.1.13",
+      "ts-node": "^10.9.2",
+      "typeorm": "0.3.20"
+   },
+   "devDependencies": {
+      "typescript": "4.5.2",
+      "ts-node": "10.9.1",
+      "@types/node": "^16.11.10"
+   },
+   "private": true
 }
