--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,15 +1,17 @@
 {
-  "compilerOptions": {
-    "target": "es2020",
-    "module": "commonjs",
-    "esModuleInterop": true,
-    "forceConsistentCasingInFileNames": true,
-    "strict": true,
-    "skipLibCheck": true,
-    "outDir": "dist"
-  },
-  "rootDir": "./src",
-  "include": [
-    "../../.cache/JetBrains/WebStorm2024.3/javascript/typings/node/22.9.3/node_modules/@types/node/globals.d.ts"
-  ]
+   "compilerOptions": {
+      "target": "es2020",
+      "module": "commonjs",
+      "esModuleInterop": true,
+      "forceConsistentCasingInFileNames": true,
+      "strict": true,
+      "skipLibCheck": true,
+      "outDir": "dist",
+      "emitDecoratorMetadata": true,
+      "experimentalDecorators": true
+   },
+   "rootDir": "./src",
+   "include": [
+      "../../.cache/JetBrains/WebStorm2024.3/javascript/typings/node/22.9.3/node_modules/@types/node/globals.d.ts"
+   ]
 }
